deploy/openshift/app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vsis-timesheet
  labels:
    app.kubernetes.io/name: vsis-timesheet
    app.kubernetes.io/part-of: vsis-timesheet
spec:
  selector:
    app.kubernetes.io/name: vsis-timesheet
  ports:
    - name: http
      port: 80
      targetPort: http
