deploy/openshift/app/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vsis-timesheet-ingress
  labels:
    app.kubernetes.io/name: vsis-timesheet
    app.kubernetes.io/part-of: vsis-timesheet
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vsis-timesheet
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-ingress
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 3000
